<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/itemQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textAlignment="center"
            android:textSize="25sp"
            />
        <RadioGroup
            android:id="@+id/answersGroup"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/deafoult_margin"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemQuestion">

            <RadioButton
                android:id="@+id/answerOneRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:layout_marginStart="@dimen/start_margin"

                />
            <RadioButton
                android:id="@+id/answerTwoRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:layout_marginStart="@dimen/start_margin"

                />
            <RadioButton
                android:id="@+id/answerThreeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:layout_marginStart="@dimen/start_margin"
                />
            <RadioButton
                android:id="@+id/answerFourRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:layout_marginStart="@dimen/start_margin"

                />

            <RadioButton
                android:id="@+id/answerFiveRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_margin"
                android:text="@string/answer"

                />

        </RadioGroup>

        <TextView
            android:id="@+id/geedBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answersGroup"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="1dp"
            android:layout_toStartOf="@+id/ratingBar"

            android:text="@string/feedBack"
            android:textAlignment="center"
            android:textSize="17sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answersGroup"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="11dp"

            android:isIndicator="true"
            android:numStars="6"
            android:padding="8dp" />
        <Button
            android:id="@+id/kitolt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:text="@string/send"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>